Port reduce session server lookups (#509) to development
Co-authored-by: Bridge <29434554+bridgelol@users.noreply.github.com>